android-inputsource: add factory settings dialog [3/3]
PD#SWPL-47802

Problem:
Need implement restore to default funcitons, includes:
1.reset all channels
2.export channels to file
3.import channels from file
4.reset satellites from file
5.export satellites to file
6.restore country and other settings

Solution:
add factory settings dialog, and add implements
in paramentermanager.
Entrance:
setprop vendor.tv.dtvkit.debugmenu true
then enter dtvkit_scan->options->FactorySettings

Verify:
ohm,redi

Change-Id: Ia8dc487c7105407153ea21901f0c2e8afdc8153e
Signed-off-by: kai.qin <kai.qin@amlogic.com>

--- a/app/src/main/droidlogic/res/values-zh-rCN/strings.xml
+++ b/app/src/main/droidlogic/res/values-zh-rCN/strings.xml
@@ -122,4 +122,10 @@
     <string name="strSettingsAutoOrdering_enable">开</string>
     <string name="strSettingsAutoSearching">自动搜索:</string>
     <string name="strSettingsAutoSearchingSetting">设置</string>
+    <string name="strSatlliteExportImport">卫星设置导出/导入</string>
+    <string name="strChannelsExportImport">频道数据导出/导入</string>
+    <string name="strExport">导出</string>
+    <string name="strImport">导入</string>
+    <string name="strFactorySettings">工厂设置</string>
+    <string name="strRestoreToDefault">恢复默认</string>
 </resources>
