android-inputsource: dvbc add quick/network/full/blind scantype [1/1]
PD#SWPL-49294

Problem:
DVBC scan feature.
Auto scan need support quick/network/full/blind
scan type.

Solution:
Add UI group for dvbc

Verify:
redi

Change-Id: I89b9c2d35dbf059fa24a3db3a338d91993bf6abd
Signed-off-by: kai.qin <kai.qin@amlogic.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,4 +125,10 @@
     <string name="tertiary_region">Tertiary Region</string>
     <string name="no_sub_regions">No sub-regions</string>
     <string name="target_region_country">Country</string>
+
+    <!-- other scan strings-->
+    <string name="strOperator">Operator</string>
+    <string name="strLcnOnOff">Lcn On</string>
+    <string name="strDvbcAutoScanType">Auto Scan Type</string>
+    <string name="strDvbcNetworkId">Network ID</string>
 </resources>
