android-inputsource: dvbs add channelType and Service Type filter [1/1]
PD#SWPL-48567

Problem:
dvbs add channelType and Service Type filter

Solution:
dvbs add channelType and Service Type filter

Verify:
redi

Change-Id: I71eddcbb1861e3f64bffdf1b869addeedc408172
Signed-off-by: kai.qin <kai.qin@amlogic.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,6 @@
     <string name="strLcnOnOff">Lcn On</string>
     <string name="strDvbcAutoScanType">Auto Scan Type</string>
     <string name="strDvbcNetworkId">Network ID</string>
+    <string name="strChannelType">Channel Type</string>
+    <string name="strServiceType">Service Type</string>
 </resources>
