--- a/app/src/main/droidlogic/res/values/strings.xml
+++ b/app/src/main/droidlogic/res/values/strings.xml
@@ -5,7 +5,10 @@
 
     <string name="title_dish_setup">DISH SETUP</string>
     <string name="list_type_satellite">Satellite</string>
+    <string name="lnb_selected_satellites">Selected Satellites</string>
+    <string name="test_satellite">Test Satellite</string>
     <string name="list_type_transponder">Transponder</string>
+    <string name="test_transponder">Test Transponder</string>
     <string name="list_type_lnb">LNB</string>
     <string name="list_type_parameter">Parameters</string>
     <string name="dialog_saving">Saving</string>
