android-inputsource: add pin dialog support [1/1]
PD#SWPL-37090

Problem:
8669-570
No step/menu item which is asking user
to set pin code after factory reset

Solution:
add pin dialog support

Verify:
redi

Change-Id: Ib0505674dba9c4914312a0d32d0d2b603be64be6
Signed-off-by: kai.qin <kai.qin@amlogic.com>
Signed-off-by: Zhiwei Yan <zhiwei.yan@amlogic.com>

--- a/app/src/main/droidlogic/res/values/strings.xml
+++ b/app/src/main/droidlogic/res/values/strings.xml
@@ -135,4 +135,15 @@
     <string name="strFactorySettings">Factory Settings</string>
     <string name="strRestoreToDefault">Restore to Default</string>
 
+    <!-- password dialog-->
+    <string name="please_enter_pin">Please enter your PIN</string>
+    <string name="old_password">Please input old PIN</string>
+    <string name="new_password">Please input new PIN</string>
+    <string name="new_password_again">Please input new PIN again</string>
+    <string name="invalid_password">Invalid PIN</string>
+    <string name="change_password_not_match">The two passwords must match</string>
+    <string name="condensed_font" translatable="false">sans-serif-condensed</string>
+    <string name="option_item_text_font" translatable="false">@string/condensed_font</string>
+    <string name="option_item_secondary_text_font" translatable="false">@string/condensed_font</string>
+    <string name="number_picker_asterisk" translatable="false">*</string>
 </resources>
