android-inputsource: support seprate channels with different dvb system [1/3]
PD#SWPL-51152

Problem:
Feature of shown seprate channels with different dvb system
in the channel list.

Solution:
1. Add channel type to COLUMN_TYPE of tv provider
2. Sync current dvb source to dtvkit and livetv
3. Update dvb scan menu

Verify:
redi

Change-Id: Ia169f59035fa914838be43de6d3ed0c3fb2651fb
Signed-off-by: kai.qin <kai.qin@amlogic.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="strDvbc">DVB-C</string>
     <string name="strDvbt">DVB-T</string>
     <string name="strDvbs">DVB-S</string>
+    <string name="strScanMenu">Scan menu</string>
 
     <string name="strStopSearch">Stop Search</string>
     <string name="manualSearch">Manual Search</string>
