android-inputsource: add new lnbtype 4 for 5150/5750 [1/1]
PD#SWPL-52598

Problem:
PD#SWPL-52598
PD#SWPL-53081
1.add new lnbtype 4 for 5150/5750
2.interfaces of dish position update

Solution:
1.add new lnbtype 4 for 5150/575
2.zero the min/max frequency of lnb band
3.remove dish postion index manager in ui
4.update diseqc 1.3 location action

Verify:
redi

Change-Id: I29cf919019cb443a18576f0d8036a46bc7b3e900
Signed-off-by: kai.qin <kai.qin@amlogic.com>

--- a/app/src/main/droidlogic/res/values/strings.xml
+++ b/app/src/main/droidlogic/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="parameter_lnb_type">LNB Type</string>
     <string name="parameter_lnb_type_5150">5150</string>
     <string name="parameter_lnb_type_9750">9750/10600</string>
+    <string name="parameter_lnb_type_5750">5150/5750</string>
     <string name="parameter_lnb_custom">Customize</string>
     <string name="parameter_lnb_custom_frequency1">Low Band:</string>
     <string name="parameter_lnb_custom_frequency2">High Band:</string>
