inputsource: Dvbs restore in Factory Settings [1/1]
PD#SWPL-55244

Problem:
Only need support dvbs restore now, should clean
dvbs channels and reset satellites when rest.

Solution:
Clean dvbs channels and reset search mode when
reset satellites.

Verify:
redi

Change-Id: Ieeb9b6f6396551f0cb5a769fdeb511bca1d2c09f
Signed-off-by: kai.qin <kai.qin@amlogic.com>

--- a/app/src/main/droidlogic/res/values/strings.xml
+++ b/app/src/main/droidlogic/res/values/strings.xml
@@ -134,7 +134,7 @@
     <string name="strExport">Export</string>
     <string name="strImport">Import</string>
     <string name="strFactorySettings">Factory Settings</string>
-    <string name="strRestoreToDefault">Restore to Default</string>
+    <string name="strRestoreToDefault">DVBS Reset</string>
 
     <!-- password dialog-->
     <string name="please_enter_pin">Please enter your PIN</string>
