--- a/app/src/main/droidlogic/res/values-zh-rCN/strings.xml
+++ b/app/src/main/droidlogic/res/values-zh-rCN/strings.xml
@@ -127,5 +127,5 @@
     <string name="strExport">导出</string>
     <string name="strImport">导入</string>
     <string name="strFactorySettings">工厂设置</string>
-    <string name="strRestoreToDefault">恢复默认</string>
+    <string name="strRestoreToDefault">重置DVBS</string>
 </resources>
