inputsource: AutomaticSearching with the current signal type [1/1]
PD#SWPL-56962
PD#SWPL-57021

Problem:
When automaticsearch starts, it use the wrong
signal type some times.

Solution:
1.Makea utomaticSearching with the current signal type
2.Update dvbc scan command.
3.Automatic scan in operator mode design as foreground scan

Verify:
redi

Change-Id: I67a79c0e5e04d941c36cf0c1782c343705d2340d
Signed-off-by: kai.qin <kai.qin@amlogic.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,7 @@
     <string name="time_setting">Time:</string>
     <string name="dvb_network_change_search_no_result">has not searched new channel !</string>
     <string name="dvb_network_change_search_channel_unavailable">has not searched more new channel !</string>
+    <string name="notice_automatic_scan">It\'s time to do automatic searching with operator mode, scanning now?</string>
 
     <!-- pvr record delete -->
     <string name="pvr_record_confirm_delete_schedule">Please delete pvr schedules files firstly!</string>
